# dtypes-extra

./: ChangeLog.md  dtypes-extra.cabal
src/DTypes/: Collect.hs
src/DTypes/Instances/: AlternativeInducesMonoid.hs
